# datalake-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PREVIEW_SMOKE.md  README.md  conftest.py  lefthook.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  preview.yml  release.yml
docs/architecture/: README.md  data-model.md
docs/dev/: adding-a-module.md
docs/ops/: ci-cd.md
jobs/account/: Dockerfile  pyproject.toml
jobs/account/src/account/: __main__.py
jobs/account/src/account/apps/: account_move_app.py
jobs/account/src/account/factories/: service_factory.py
jobs/account/src/account/models/: account_move.py  account_move_line.py
jobs/account/src/account/persistence/models/: __init__.py  account_move.py  account_move_line.py
jobs/account/src/account/persistence/repositories/: __init__.py  bigquery_account_move_repository.py  bigquery_sync_state.py
jobs/account/src/account/services/extractors/: odoo_account_move_extractor.py
jobs/account/src/account/services/loaders/: bigquery_account_move_loader.py
jobs/account/src/account/services/transformers/: account_move_transformer.py
jobs/account/tests/: test_account_crash_between_batch.py  test_account_move_transformer.py  test_bigquery_account_move_repository.py  test_bigquery_sync_state.py  test_domain.py  test_main_wiring.py  test_odoo_account_move_extractor.py
transform/: .gitignore  .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml
transform/macros/: dedup_latest.sql
transform/models/staging/odoo/: _stg_odoo__models.yml  _stg_odoo__sources.yml  (+2 more)
